--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,4 @@
-google-generativeai==0.8.4
-python-telegram-bot==22.0
-requests==2.32.3
+python-telegram-bot==20.6
+google-generativeai
+aiohttp
+requests
